# Pegasus-Advanced-Location-Tracking-System

./: .gitignore  README.md  README_SETUP.md  __init__.py  install.py  locations.db  pegasus-track-new.py  pegasus.py  pyproject.toml  requirements.txt  run.py  run_bot.bat  run_pegasus.bat  setup.py  verify_imports.py
bot/: __init__.py  main.py
config/: __init__.py  config.example.py  config.py
data/: __init__.py
handlers/: __init__.py  admin_handlers.py  alert_handlers.py  callback_handlers.py  location_handlers.py  poi_handlers.py  settings_handlers.py
utils/: __init__.py  database.py  geo_utils.py  notifications.py
web/: dashboard.py
web/static/css/: styles.css
web/templates/: index.html
